Revert "Altered spacing for field selection table to prevent the cutting off of labels"
This reverts commit 453742dd2079402d0b3c64bfa5c23d511be8af86.

--- a/frontend/components/Headers/Header/Header.module.css
+++ b/frontend/components/Headers/Header/Header.module.css
@@ -8,11 +8,7 @@
 
   padding: 3px;
   opacity: 1 !important;
-  width: auto;
-  white-space: nowrap;
-  flex-grow: 1;
-  padding-left: 10px;
-  padding-right: 10px;
+  width: 100%;
 
   background-color: var(--secondary);
 
